# Folder-Customizer

./: .gitignore  .gitmodules  .order  .prettierrc  CMakeLists.txt  LOG_14-06-2023 [17-36-25-488].txt  Makefile  OPTIMIZATION_SUMMARY.md  build-system-changes.md  build.ps1  bundled-libs-report.txt  compile_commands.json  icon_refresher.cpp  icon_refresher.h  install.sh  installer.iss  manifest.json  readme.md  refresher.py  release_notes.md  run-build.ps1  style.qss  test_incremental_build.md  testing.cpp  updater.iss
.github/workflows/: build-release.yml
Icons/: Folder Customizer.rc  bundle.ps1  convert.ps1  readme.md  resource.qrc  toBmp.ps1
Include/Core/: registry.h
Include/Customizer/: folderCustomizer.h  icon_refresher.h  settings.h  tagger.h
Include/Logger/: logger.h
Include/UserInterface/: cli.h  subclass.h  window.h
Include/Window/: window.h
Installer/: before_installation.txt  installer.iss  new - installer.iss  new - installer2.iss
Registry (Improve)/: addToRegistry.reg
Source Code (py)/: DeskEdit.ini  run.cmd  setup.py
Source Code (py)/Customizer/: Colorizer.py  Tagger.py
Source Code (py)/Helper/: Operator (deprecated).py  Operator.py
Source Code (py)/Window/: _subclass.py  folderCustomizerWindow.py
Trash/: Folder Customizer (python) bak.py  refresh.ps1  tagger.cpp
Trash/Source Code (exe)/: Folder Customizer (python).py  key installer (exe).py  key uninstaller.py
Trash/Source Code (exe)/Trash/: Create Release.py
Updater/: CMakeLists.txt  updater.cpp  updater.iss
backup/st/: launch.json
cmake/: BoostDeploy.cmake  CMAKE_MODULES_README.md  EnhancedQtDeploy.cmake  PruneInstall.cmake  README-Boost-Strategy.md  README-Complete-Deployment-Fix.md  README-Qt-Deployment-Fix.md  eUpdaterIntegration.cmake
cmake/config/: BoostConfig.cmake  QtConfig.cmake
cmake/deployment/: EnhancedQtDeploy.cmake  MinGWDeploy.cmake  PruneInstall.cmake
cmake/integration/: eUpdaterIntegration.cmake
cmake/utilities/: BoostUtilities.cmake  InstallConfiguration.cmake  PostBuildOptimization.cmake
config/: config.xml
docs/: GENERIC_DESKTOP_FRAMEWORK.md  deployment-system.md  docs.md
legacy/: CMakelists.txt  README.md
legacy/Source Code (py)/: Folder Customizer (python).py
legacy/Source Code (py)/Customizer/: Colorizer (deprecated).py  Tagger (deprecated).py
legacy/Source Code (py)/Helper/: Registry.py  deleter teset.py
legacy/Source Code (py)/Window/: _subclass.py  folderCustomizerCommandLine.py  folderCustomizerWindow.py
legacy/Trash/: ask.py  icon_refresher_copy.cpp  makefile
legacy/Trash/Source Code (exe)/: Folder Customizer (exe).py  key installer (python).py
pack/appdir/FolderCustomizer.AppDir/: .DirIcon  AppRun  FolderCustomizer.desktop
pack/appdir/FolderCustomizer.AppDir/usr/lib/: libGLX.so.0  libGLdispatch.so.0  libcom_err.so.2  libexpat.so.1  libgmodule-2.0.so.0  libgomp.so.1  libgssapi_krb5.so.2  libpcre2-16.so.0  libpng16.so.16  libstdc++.so.6
pack/arch/: PKGBUILD
pack/arch/pkg/folder-customizer/: .BUILDINFO  .MTREE  .PKGINFO
pack/arch/pkg/folder-customizer/usr/lib/folder-customizer/: FolderCustomizer  libOpenGL.so.0  libX11.so.6  libbrotlicommon.so.1  libcurl.so.4  libduktape.so.207  libglib-2.0.so.0  libgraphite2.so.3  libharfbuzz.so.0  libmount.so.1  libnghttp2.so.14  libnghttp3.so.9  libpcre2-8.so.0  libssh2.so.1  libsystemd.so.0
pack/deb/folder-customizer_0.0.15_amd64/DEBIAN/: control  postinst
pack/deb/folder-customizer_0.0.15_amd64/usr/lib/folder-customizer/: libcap.so.2  libffi.so.8  libgio-2.0.so.0  libicui18n.so.76  libicuuc.so.76  libkrb5support.so.0  libmd4c.so.0  libunistring.so.5
pack/deb/folder-customizer_0.0.15_amd64/usr/share/applications/: folder-customizer.desktop
pack/deb/folder-customizer_0.0.16_amd64/DEBIAN/: control
release/: FolderCustomizer-0.0.15-x86_64.AppImage  folder-customizer-0.0.15-1-x86_64.pkg.tar.zst  folder-customizer_0.0.15_amd64.deb  folder-customizer_0.0.16_amd64.deb
release/folder-customizer-0.0.15-1.x86_64/: manifest.json
repository/: 2025-02-06-1638_meta.7z  2025-02-23-1352_meta.7z  2025-03-30-2312_meta.7z  Updates.xml
repository/com.foldercustomizer/: 0.0.3bin.7z.sha1  0.0.3meta.7z  0.0.3plugins.7z  0.0.3plugins.7z.sha1  0.0.4bin.7z.sha1  0.0.4meta.7z  0.0.4plugins.7z  0.0.4plugins.7z.sha1
repository/com.mainprogram/: 0.0.4bin.7z.sha1  0.0.4meta.7z  0.0.4plugins.7z  0.0.4plugins.7z.sha1
resource/: eupdater_icon.qrc
scripts/: BuildAndPackage.ps1  README-Boost-Windows.md  build-linux.sh  build-windows.ps1  build.ps1  build.sh  bump_version.ps1  bundle-libraries.sh  debug_dependencies.sh  deploy.sh  eDeployLinux.sh  eDeployWindows.ps1  eInstall.sh  generate-template.sh  generate_release_notes.ps1  github_upload.sh  install-boost-windows.ps1  readme.md  release_template.md  run.sh  update_installer.ps1  update_repository.ps1  update_updater.ps1  validate-desktop.sh
scripts/templates/: PKGBUILD.template  rpm.spec.template
squashfs-root/usr/lib/: libEGL.so.1  libQt6DBus.so.6  libQt6Network.so.6  libXau.so.6  libb2.so.1  libblkid.so.1  libbrotlidec.so.1  libdbus-1.so.3  libdouble-conversion.so.3  libfontconfig.so.1  libfreetype.so.6  libgobject-2.0.so.0  libk5crypto.so.3  libkrb5.so.3  libproxy.so.1  libssl.so.3  libxkbcommon.so.0  libzstd.so.1
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  registry.cpp
src/Customizer/: CMakeLists.txt  folderCustomizer.cpp  icon_refresher.cpp  icon_refresher.h  tagger.cpp  tagger.h
src/Logger/: CMakeLists.txt  logger.cpp
src/Registry/: registry.h
src/UserInterface/: CMakeLists.txt  cli.cpp  subclass.cpp  window.cpp
src/Utils/: CMakeLists.txt  utils.cpp  utils.h
src/Window/: CMakeLists.txt  subclass.cpp  subclass.h  window.cpp  window.h
src/context-menu/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  FileContextMenuExt.cpp  FileContextMenuExt.h  Reg.cpp  Reg.h  desktop.ini  dllmain.cpp  main.cpp
usr/share/applications/: folder-customizer.desktop
workflows/: build-release.yml
